--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 AM_CFLAGS = 
-AM_LDFLAGS = -lxcb -pthread
+AM_LDFLAGS =
 
 bin_PROGRAMS = wm
 wm_SOURCES = wm.cpp wm.h screen.cpp screen.h window.cpp window.h
