Improved documentation and behavior around atom usage

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,5 +2,5 @@ AM_CFLAGS =
 AM_LDFLAGS =
 
 bin_PROGRAMS = wm
-wm_SOURCES = wm.cpp wm.h screen.cpp screen.h window.cpp window.h
+wm_SOURCES = wm.cpp wm.h screen.cpp screen.h window.cpp window.h windowsystem.cpp windowsystem.h
 
