Initial prototype of window manager menu, only supports artificial right click for right now

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT(wm, [VERSION], [BUG-REPORT-ADDRESS])
+AC_INIT(touchwm, [VERSION], [BUG-REPORT-ADDRESS])
 AC_CONFIG_SRCDIR([src/screen.h])
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE
@@ -13,11 +13,18 @@ AC_PROG_CC
 
 # Checks for libraries.
 # FIXME: Replace `main' with a function in `-lxcb':
-AC_CHECK_LIB([xcb], [main])
-AC_CHECK_LIB([xcb-xinput], [main])
+#AC_CHECK_LIB([xcb], [main])
+#AC_CHECK_LIB([xcb-xinput], [main])
 AC_CHECK_LIB([xcb-util], [main])
-AC_CHECK_LIB([xcb-ewmh], [main])
-AC_CHECK_LIB([suinput], [main])
+#AC_CHECK_LIB([xcb-ewmh], [main])
+#AC_CHECK_LIB([suinput], [main])
+#AC_CHECK_LIB([cairo], [main])
+PKG_CHECK_MODULES([xcb], [xcb])
+PKG_CHECK_MODULES([xcbxinput], [xcb-xinput])
+PKG_CHECK_MODULES([xcbutil], [xcb-util])
+PKG_CHECK_MODULES([xcbewmh], [xcb-ewmh])
+PKG_CHECK_MODULES([libsuinput], [libsuinput])
+PKG_CHECK_MODULES([cairo], [cairo])
 
 # Checks for header files.
 
