--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
-AM_CFLAGS = 
-AM_LDFLAGS =
+AM_CFLAGS = $(xcb_CFLAGS) $(xcbxinput_CFLAGS) $(xcbutil_CFLAGS) $(xcbewmh_CFLAGS) $(libsuinput_CFLAGS) $(cairo_CFLAGS)
+AM_LDFLAGS = $(xcb_LIBS) $(xcbxinput_LIBS) $(xcbutil_LIBS) $(xcbewmh_LIBS) $(libsuinput_LIBS) $(cairo_LIBS)
 
-bin_PROGRAMS = wm
-wm_SOURCES = wm.cpp wm.h screen.cpp screen.h window.cpp window.h windowsystem.cpp windowsystem.h
+bin_PROGRAMS = touchwm
+touchwm_SOURCES = wm.cpp wm.h screen.cpp screen.h window.cpp window.h windowsystem.cpp windowsystem.h wmwindow.cpp wmwindow.h
 
