--- a/configure.ac
+++ b/configure.ac
@@ -16,6 +16,7 @@ AC_PROG_CC
 #AC_CHECK_LIB([xcb], [main])
 #AC_CHECK_LIB([xcb-xinput], [main])
 AC_CHECK_LIB([xcb-util], [main])
+AC_CHECK_LIB([librsvg-2.0], [main])
 #AC_CHECK_LIB([xcb-ewmh], [main])
 #AC_CHECK_LIB([suinput], [main])
 #AC_CHECK_LIB([cairo], [main])
@@ -25,6 +26,7 @@ PKG_CHECK_MODULES([xcbutil], [xcb-util])
 PKG_CHECK_MODULES([xcbewmh], [xcb-ewmh])
 PKG_CHECK_MODULES([libsuinput], [libsuinput])
 PKG_CHECK_MODULES([cairo], [cairo])
+PKG_CHECK_MODULES([librsvg2], [librsvg-2.0])
 
 # Checks for header files.
 
@@ -35,4 +37,5 @@ AC_TYPE_UINT32_T
 # Checks for library functions.
 
 AC_CONFIG_FILES([src/Makefile])
+AC_CONFIG_FILES([default-theme/Makefile])
 AC_OUTPUT(Makefile)
