Groundwork for alt-tab support

--- a/configure.ac
+++ b/configure.ac
@@ -24,6 +24,7 @@ PKG_CHECK_MODULES([xcb], [xcb])
 PKG_CHECK_MODULES([xcbxinput], [xcb-xinput])
 PKG_CHECK_MODULES([xcbutil], [xcb-util])
 PKG_CHECK_MODULES([xcbewmh], [xcb-ewmh])
+PKG_CHECK_MODULES([xcbkeysyms], [xcb-keysyms])
 PKG_CHECK_MODULES([libsuinput], [libsuinput])
 PKG_CHECK_MODULES([cairo], [cairo])
 PKG_CHECK_MODULES([librsvg2], [librsvg-2.0])
