--- a/default-theme/Makefile.am
+++ b/default-theme/Makefile.am
@@ -1,2 +1,2 @@
 defaultthemedir = $(datadir)/@PACKAGE@/default-theme
-defaulttheme_DATA=close.svg hmax.svg minimize.svg rclick.svg topmost.svg vmax.svg max.svg
+defaulttheme_DATA=close.svg hmax.svg minimize.svg rclick.svg topmost.svg below.svg vmax.svg max.svg
