Correcting identification of libsuinput in configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -18,14 +18,14 @@ AC_PROG_CC
 AC_CHECK_LIB([xcb-util], [main])
 AC_CHECK_LIB([librsvg-2.0], [main])
 #AC_CHECK_LIB([xcb-ewmh], [main])
-#AC_CHECK_LIB([suinput], [main])
+AC_CHECK_LIB([suinput], [main])
 #AC_CHECK_LIB([cairo], [main])
 PKG_CHECK_MODULES([xcb], [xcb])
 PKG_CHECK_MODULES([xcbxinput], [xcb-xinput])
 PKG_CHECK_MODULES([xcbutil], [xcb-util])
 PKG_CHECK_MODULES([xcbewmh], [xcb-ewmh])
 PKG_CHECK_MODULES([xcbkeysyms], [xcb-keysyms])
-PKG_CHECK_MODULES([libsuinput], [libsuinput])
+#PKG_CHECK_MODULES([suinput], [suinput])
 PKG_CHECK_MODULES([cairo], [cairo])
 PKG_CHECK_MODULES([librsvg2], [librsvg-2.0])
 
